[package]
name = "wolffserial"
version = "0.2.0"
edition = "2018"
authors = ["jadon <16850875+wolffshots@users.noreply.github.com>"]
description = "Simple cli tool for listing and watching serial ports"
readme = "README.md"
repository = "https://github.com/wolffshots/wolffserial-rs"
license = "MIT"
keywords = ["serial"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "^4"
clap = "^2"
